# fg-sra

./: .gitignore  .gitmodules  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml  publish.yml
crates/fg-sra/: CHANGELOG.md  Cargo.toml
crates/fg-sra-vdb/: CHANGELOG.md  Cargo.toml
crates/fg-sra-vdb-sys/: CHANGELOG.md  Cargo.toml  build.rs  wrapper.h
crates/fg-sra-vdb-sys/src/: lib.rs
crates/fg-sra-vdb/src/: cursor.rs  database.rs  error.rs  iterator.rs  lib.rs  manager.rs  reference.rs  retry.rs
crates/fg-sra/src/: aligned.rs  cigar.rs  cli.rs  header.rs  main.rs  matecache.rs  output.rs  progress.rs  quality.rs  record.rs  unaligned.rs
crates/fg-sratosam/: Cargo.toml
crates/fg-sratosam/src/: aligned.rs  cli.rs  header.rs  main.rs  matecache.rs  md_tag.rs  output.rs  record.rs  unaligned.rs
